fix: layout on mobile

--- a/apps/lectoraat-smart-energy-web/src/styles.css
+++ b/apps/lectoraat-smart-energy-web/src/styles.css
@@ -2,4 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-/* You can add global styles to this file, and also import other style files */
+@media (max-width: 760px) {
+  /* hide scrollbar */
+  body::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
+}
+
